# google-drive-reader-llama-index

./: .gitignore  Dockerfile  README.md  google_crawler.py  index_run.py  pyproject.toml  web-api.py
google-drive-reader/: googledrivereader.py
google-drive-reader/doc_readers/: __init__.py  document_type.py  google_doc_reader.py  google_docx_reader.py  google_item_reader.py  google_sheet_reader.py
google_drive_reader/doc_readers/: __init__.py  document_type.py  google_doc_reader.py  google_docx_reader.py  google_item_reader.py  google_pdf_reader.py  google_sheet_reader.py  googledrivereader.py
google_drive_reader/indexer/: index_runner.py
