[tool.poetry]
name = "google-drive-reader-llama-index"
version = "0.1.0"
description = "It's a simple google drive reader for llama-index, that is capable to read google doc, sheet and docx files from a folder or entire drive"
authors = ["Alex Demchuk <demchukaa@gmail.com>"]
readme = "README.md"
packages = [{include = "google_drive_reader_llama_index"}, {include = './google-drive-reader'}]

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.5.12"
google-auth = "^2.17.2"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.85.0"
pandas = "^2.0.0"
google-auth-oauthlib = "^1.0.0"
tenacity = "^8.2.2"
python-docx = "^0.8.11"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
